k8s/base/network-policies.yml
# Denegar todo el trafico por defecto
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress 
    - Egress 

---
#Solo el api-gateway puede recibir el trafico externo
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: allow-gateway-ingress
spec:
  podSelector: 
    matchLabels:
      app: api-gateway 
  policyTypes: 
    - Ingress 
  ingress:
    - {}

---
# Solo el api-gateway puede hablar con el user-service
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-user-service
spec:
  podSelector:
    matchLabels:
      app: user-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - port: 8001

---
# Solo el api-gateway puede hablar con el order-service
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-order-service
spec:
  podSelector:
    matchLabels:
      app: order-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - port: 8002

---
# Solo el api-gateway puede hablar con el notification-service
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-notification-service
spec:
  podSelector:
    matchLabels:
      app: notification-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - port: 8003
